# databend

./: Cargo.toml  taplo.toml  www.sql
.cargo/: config.toml
agents/: development-commands.md
benchmark/: README.md  query-core-split-candidates-2026-03-30.md  query-crate-split-experiments-2026-03-30.md  query-crate-split-workspaces-2026-03-30.md  query-distributed-split-benchmark-2026-03-30.md  query-min-compile-hotspots-2026-03-29.md  query-min-compile-progress-2026-03-29.md  query-min-compile-progress-2026-03-30.md  query-min-gate-cost-review-2026-03-30.md  query-min-single-gate-benchmark-2026-03-30.md
benchmark/internal/: query_hot_compile_admin_server.md  query_hot_compile_federated.md  query_hot_compile_http_handler_server.md  query_hot_compile_mysql_server.md  query_hot_compile_name_resolution.md  query_hot_compile_service_server_split.md  query_hot_compile_sql_plans.md  query_hot_compile_summary.md
docker/service/: udf-sandbox-runtime.Dockerfile
scripts/: hf_sandbox_udf_test.sql  run_hf_sandbox_udf.sh
scripts/ci/deploy/config/: databend-query-node-1.toml
scripts/query-split/: setup-experiment-workspaces.sh
src/bendpy/tests/: test_api_style.py
src/binaries/: Cargo.toml
src/common/storage/: Cargo.toml
src/common/storage/src/: lib.rs  operator.rs
src/common/version/: Cargo.toml  build.rs
src/meta/app/src/principal/: file_format.rs
src/query/ast/src/parser/: statement.rs  token.rs
src/query/config/src/: config.rs  inner.rs
src/query/distributed/: Cargo.toml
src/query/distributed/src/: flight_client.rs  lib.rs
src/query/distributed/src/network/: inbound_channel.rs  inbound_quota.rs  local_channel.rs  outbound_buffer.rs  outbound_channel.rs  outbound_transport.rs
src/query/distributed/src/packets/: mod.rs  packet_data.rs  packet_data_progressinfo.rs
src/query/distributed/src/scatter/: flight_scatter_broadcast.rs  flight_scatter_hash.rs
src/query/ee/: Cargo.toml
src/query/ee/src/: enterprise_services.rs  lib.rs
src/query/ee/src/hilbert_clustering/: handler.rs
src/query/ee/src/storages/fuse/operations/: virtual_columns.rs
src/query/ee/src/test_kits/: mock_services.rs
src/query/ee_features/attach_table/: Cargo.toml
src/query/ee_features/stream_handler/: Cargo.toml
src/query/ee_features/table_ref_handler/: Cargo.toml
src/query/ee_features/virtual_column/: Cargo.toml
src/query/expression/src/: schema.rs
src/query/expression/src/utils/: display.rs
src/query/formats/src/field_encoder/: values.rs
src/query/formats/src/output_format/: csv.rs
src/query/functions/src/: lib.rs
src/query/functions/src/scalars/: binary.rs  mod.rs  string.rs
src/query/pipeline/transforms/: Cargo.toml
src/query/runtime_managers/: Cargo.toml
src/query/runtime_managers/src/: lib.rs
src/query/runtime_managers/src/session/: mod.rs  token.rs
src/query/service/: Cargo.toml  build.rs
src/query/service/admin-server/: Cargo.toml
src/query/service/admin-server/src/: lib.rs
src/query/service/federated/: Cargo.toml
src/query/service/federated/src/: lib.rs
src/query/service/http-handler-server/: Cargo.toml
src/query/service/http-handler-server/src/: lib.rs
src/query/service/metrics-server/: Cargo.toml
src/query/service/metrics-server/src/: lib.rs
src/query/service/mysql-server/: Cargo.toml
src/query/service/mysql-server/src/: lib.rs
src/query/service/server-api/: Cargo.toml
src/query/service/server-api/src/: lib.rs
src/query/service/src/: auth.rs  distributed.rs  global_services.rs  lib.rs
src/query/service/src/catalogs/: mod.rs
src/query/service/src/clusters/: cluster.rs
src/query/service/src/interpreters/: interpreter_explain.rs  interpreter_factory.rs  interpreter_insert.rs  interpreter_kill.rs  interpreter_object_tag.rs  interpreter_replace.rs  interpreter_report_issue.rs  interpreter_set_priority.rs  interpreter_system_action.rs  interpreter_table_add_column.rs  interpreter_table_create.rs  interpreter_table_drop.rs  interpreter_table_drop_column.rs  interpreter_table_modify_column.rs  interpreter_table_modify_comment.rs  interpreter_table_modify_connection.rs  interpreter_table_rename_column.rs  interpreter_table_row_access_add.rs  interpreter_table_show_create.rs  interpreter_table_truncate.rs  interpreter_view_describe.rs  interpreter_view_drop.rs  mod.rs
src/query/service/src/physical_plans/: physical_aggregate_final.rs  physical_window.rs
src/query/service/src/pipelines/: pipeline_build_res.rs  pipeline_builder.rs
src/query/service/src/runtime_managers/: mod.rs
src/query/service/src/servers/: mod.rs  server.rs
src/query/service/src/sessions/: query_ctx.rs  query_ctx_shared.rs
src/query/service/src/table_functions/: mod.rs  table_function_factory.rs  temporary_tables_table.rs
src/query/settings/src/: settings_getter_setter.rs
src/query/sql/: Cargo.toml
src/query/sql/name-resolution/: Cargo.toml
src/query/sql/plans/: Cargo.toml
src/query/sql/plans/src/: aggregate.rs  async_function.rs  copy_into_location.rs  copy_into_table.rs  eval_scalar.rs  exchange.rs  filter.rs  insert.rs  insert_multi_table.rs  join.rs  lib.rs  limit.rs  metadata.rs  optimize.rs  plan.rs  rel_op.rs  replace.rs  scalar.rs  secure_filter.rs  set.rs  sort.rs  udaf.rs  udf.rs  union_all.rs  window.rs
src/query/sql/plans/src/ddl/: dynamic_table.rs  index.rs  mod.rs  table.rs
src/query/sql/tests/it/: eager_aggregation.rs
src/query/storages/common/index/: Cargo.toml
src/query/storages/factory/: Cargo.toml
src/query/storages/factory/src/: storage_factory.rs
src/query/storages/fuse/: Cargo.toml
src/query/storages/fuse/src/: fuse_table.rs
src/query/storages/iceberg/: Cargo.toml
src/query/storages/iceberg/src/: partition.rs  table.rs
src/query/storages/information_schema/: Cargo.toml
src/query/storages/stream/: Cargo.toml
src/query/storages/system/: Cargo.toml
tests/data/ngram_test/: get.sh
tests/sqllogictests/scripts/: d.py  docker-compose-iceberg-test.yml  docker-compose-iceberg-tpch.yml  prepare_iceberg_test_data.py
tests/sqllogictests/scripts/spark/: Dockerfile
(+213 files in other folders)
