[package]
name = "databend-common-version"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[features]
default = ["full-build-info"]
full-build-info = ["dep:databend-common-building"]

[dependencies]
databend-common-base = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
regex = { workspace = true }

[build-dependencies]
databend-common-building = { workspace = true, optional = true }

[lints]
workspace = true
