[package]
name = "databend-query-distributed"
description = "Distributed flight client and packet types for Databend query"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[dependencies]
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
async-backtrace = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
concurrent-queue = { workspace = true }
databend-common-base = { workspace = true }
databend-common-catalog = { workspace = true }
databend-common-exception = { workspace = true }
databend-common-expression = { workspace = true }
databend-common-functions = { workspace = true }
databend-common-grpc = { workspace = true }
databend-common-io = { workspace = true }
databend-common-pipeline = { workspace = true }
databend-common-settings = { workspace = true }
databend-common-storage = { workspace = true }
databend-common-tracing = { workspace = true }
fastrace = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_stacker = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }

[lints]
workspace = true
