[package]
name = "databend-query-federated"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[dependencies]
databend-common-expression = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
