[package]
name = "databend-query-metrics-server"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[dependencies]
async-backtrace = { workspace = true }
async-trait = { workspace = true }
databend-common-base = { workspace = true }
databend-common-exception = { workspace = true }
databend-common-http = { workspace = true }
databend-query-server-api = { workspace = true }
poem = { workspace = true }

[lints]
workspace = true
