[package]
name = "databend-common-sql-plans"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true }
databend-common-ast = { workspace = true }
databend-common-catalog = { workspace = true }
databend-common-expression = { workspace = true }
databend-common-meta-app = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
